[gd_scene load_steps=2 format=2]

[ext_resource path="res://Player/Scripts/camera.gd" type="Script" id=1]

[node name="Camera" type="Camera2D"]
rotating = true
current = true
script = ExtResource( 1 )

[node name="OffsetTween" type="Tween" parent="."]

[node name="RotTween" type="Tween" parent="."]

[node name="Timer" type="Timer" parent="."]
one_shot = true

[connection signal="tree_exiting" from="." to="." method="_on_Camera_tree_exiting"]
[connection signal="tween_all_completed" from="OffsetTween" to="." method="_on_Tween_tween_all_completed"]
